# research_test

./: README.md  app.py  database.db  database.db-journal  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_wellbeingwhisper.yml
Anupa/Accuracy/: AccuracyChatbot_AiBased.csv  AccuracyChatbot_AiBased_aftermodification.csv  AccuracyChatbot_Hybrid.csv  AccuracyChatbot_Hybrid_aftermodification.csv  AccuracyChatbot_ruleBased.csv  AccuracyChatbot_ruleBased_aftermodification.csv
Anupa/ActivityRecommender/: ActivitySelector.py
Anupa/Chatbot/: Chatbot_001.py  Chatbot_002-Training.py  Chatbot_002_Test.py  Chatbot_accuracyCalc.py  Chatbot_accuracyComparison.py  GPTModel.py  GPT_Test.py  T5_Model_Train.py  chatbot_002.h5  file_names.csv  words.pkl
Anupa/SentimentAnalysis_Training/: SentimentAnalaysis.py  SentimentAnalysis_Train.py  Sentiment_Analysis1.py  Sentiment_Analysis2.py
Anupa/SpeechToText/: SpeechToText.py  mypythonfile.py
Anupa/StoryRecommender/: Stories.py
Anupa/Translator/: SinhalaToEnglish.py
Anupa/chatbot-deployment/: app.py  intents_modified.json
DB/: Mental_Illness_Aiding_and_Screening
ImageAnalysisComponent/: ig_prediction.py  ig_scraper.py
ImageAnalysisComponent/models/: depression_recognition_model3.pickle
TextAnalysisComponent/: app.py  model.py  prediction.py  reddit.py
spotify_mer/api/: get_lyrics.py  get_token.py  play_song.py  recently_played.py  retrieve_features.py  top_tracks.py
templates/: app.py  base.html  detect.html  detect_standard.html  index.html  payment_pro_v.html  register.html
(+7 files in other folders)
